opdracht-1/styles.css
/* Opdracht 1a */

.navbar-one ul {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
}




/* Opdracht 1b */

.navbar-two ul {
    display: flex;
    justify-content: flex-end;
    list-style-type: none;
}




/* Opdracht 1c */

/*----- Navbar flexbox -----*/
.navbar-three {
    display: flex;
}

      /*----- Logo flexbox -----*/
.navbar-three .logo {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-grow: 2;
}

            /*----- Logo -----*/
.navbar-three .logo img {

}

            /*----- Text flexbox -----*/
.navbar-three .logo p {

}

      /*----- Menu flexbox -----*/
.navbar-three ul {
    display: flex;
    justify-content: flex-end;
    list-style-type: none;
    flex-grow: 98;
}




/* Opdracht 1d */

/*----- Bullets off -----*/
.navbar-four ul {
    list-style-type: none;
}

/*----- Navbar flexbox -----*/
.navbar-four {
    display: flex;
    justify-content: space-between;
}

      /*----- Logo flexbox -----*/
/* The image takes up more space than previous iterations because
 the login buttons take up more vertical space, so the image grows to fill it.
 */
.navbar-four .logo {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: green;
}

            /*----- Logo -----*/
.navbar-four .logo img {

}

            /*----- Text flexbox -----*/
.navbar-four .logo p {

}

      /*----- Menu flexbox -----*/
.navbar-four ul.menu {
    display: flex;
    justify-content: center;
}

      /*----- Login flexbox -----*/
.navbar-four ul.login {
    display: flex;
    justify-content: flex-end;
}

